--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ScannerApp"
         tools:targetApi="31">
+        <activity android:name=".ViewItems"
+            android:exported="false"/>
+        <activity
+            android:name=".ShowDB"
+            android:exported="false" />
         <activity
             android:name=".DBActivity"
             android:exported="false"
